js/js.translator/testData/incremental/invalidation/functionDefaultParams/lib1/l1.2.kt
fun foo(x: Int = 88, y: Int = 11) = 42 + x + y
